apps/base/forgejo/keydb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-keydb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo-keydb
  template:
    metadata:
      labels:
        app: forgejo-keydb
    spec:
      containers:
        - name: forgejo-keydb
          image: eqalpha/keydb:latest
          command: ["keydb-server"]
          args: [ "/etc/keydb/keydb.conf", "--protected-mode", "no"]
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
      tolerations:
        - key: arch
          operator: Equal
          value: arm64
          effect: NoSchedule
      livenessProbe:
        exec:
          command:
          - sh
          - -c
          - keydb-cli ping
        initialDelaySeconds: 10
        timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-keydb
spec:
  selector:
    app: forgejo-keydb
  ports:
  - name: redis
    protocol: TCP
    port: 6379
    targetPort: 6379
