apps/base/forgejo/ssh-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha2
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: forgejo-ssh
          port: 22
